Import of FREW/Syntax-Feature-Gather-1.002001 from CPAN.
gitpan-cpan-distribution: Syntax-Feature-Gather
gitpan-cpan-version:      1.002001
gitpan-cpan-path:         FREW/Syntax-Feature-Gather-1.002001.tar.gz
gitpan-cpan-author:       FREW
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -3,18 +3,17 @@ author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 author           = Damian Conway
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 1.002000
+version          = 1.002001
 
 [NextRelease]
 [@Git]
-[@Filter]
-bundle = @Basic
-remove = MetaYAML
+[@Basic]
 
 [MetaResources]
 repository.url    = git://github.com/frioux/Syntax-Feature-Gather.git
 repository.web    = http://github.com/frioux/Syntax-Feature-Gather
 repository.type   = git
+bugtracker.web    = https://github.com/frioux/Syntax-Feature-Gather/issues
 
 [MetaJSON]
 [PodWeaver]
@@ -26,3 +25,4 @@ repository.type   = git
 syntax        = 0.002
 Test::More    = 0.94
 Syntax::Keyword::Gather = 1.002000
+Sub::Exporter = 0.986
